Update TRWhiteList.java